[workspace]
members = [
    ".cargo-task/generate-drivers",
    "drivers/drv8825",
    "drivers/stspin220",
]
default-members = [
    ".",
    ".cargo-task/generate-drivers",
    "drivers/drv8825",
    "drivers/stspin220",
]

[package]
name    = "step-dir"
version = "0.4.1"
authors = [
    "Hanno Braun <hanno@braun-embedded.com>",
    "Jesse Braham <jesse@beta7.io>",
]
edition = "2018"

description = "Universal Stepper Motor Interface"
homepage    = "https://flott-motion.org/"
repository  = "https://github.com/flott-motion/step-dir"
license     = "0BSD"
keywords    = ["stepper", "motor", "driver", "abstract", "interface"]
categories  = ["embedded", "hardware-support", "no-std", "science::robotics"]

[dependencies]
embedded-hal  = "=1.0.0-alpha.4"
embedded-time = "0.10.1"
nb            = "1.0.0"
paste         = "1.0.3"

[dependencies.num-traits]
version          = "0.2.14"
default-features = false

[features]
default = ["drv8825", "stspin220"]
drv8825 = []
stspin220 = []
