[workspace]
members = [
    ".cargo-task/generate-drivers",
    "drivers/a4988",
    "drivers/drv8825",
    "drivers/stspin220",
]
default-members = [
    ".",
    ".cargo-task/generate-drivers",
    "drivers/a4988",
    "drivers/drv8825",
    "drivers/stspin220",
]

[package]
name = "stepper"
version = "0.6.0"
authors = [
    "Hanno Braun <hanno@braun-embedded.com>",
    "Jesse Braham <jesse@beta7.io>",
]
edition = "2018"

description = "Universal Stepper Motor Interface"
repository = "https://github.com/braun-embedded/stepper"
license = "0BSD"
keywords = ["stepper", "motor", "driver", "abstract", "interface"]
categories = ["embedded", "hardware-support", "no-std", "science::robotics"]


[dependencies]
embedded-hal = "=1.0.0-rc.1"
fugit = "0.3.5"
fugit-timer = "0.1.3"
nb = "1.0.0"
paste = "1.0.3"
ramp-maker = "0.2.0"

[dependencies.embedded-hal-stable]
version = "0.2.7"
package = "embedded-hal"

[dependencies.num-traits]
version = "0.2.14"
default-features = false

[dependencies.replace_with]
version = "0.1.7"
default-features = false


[dev-dependencies]
fixed = "1.6.0"
typenum = "1.12.0"


[features]
default = ["a4988", "drv8825", "stspin220", "dq542ma"]
a4988 = []
drv8825 = []
stspin220 = []
dq542ma = []
