[package]
name = "generate-drivers"
version = "0.0.0"
authors = ["Jesse Braham <jesse@beta7.io>"]
edition = "2018"
publish = false

[dependencies]
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
tinytemplate = "1.1.0"
toml = "0.5.7"

[dependencies.cargo_task_util]
path = "../cargo_task_util"
