[package]
name    = "drv8825"
version = "0.4.1"
authors = [
    "Hanno Braun <hanno@braun-embedded.com>",
    "Jesse Braham <jesse@beta7.io>",
]
edition = "2018"

description = "Driver crate for the DRV8825 stepper motor driver"
repository  = "https://github.com/flott-motion/step-dir"
license     = "0BSD"
keywords    = ["step-dir", "stepper", "motor", "driver", "pololu"]
categories  = ["embedded", "hardware-support", "no-std", "science::robotics"]


[dependencies.step-dir]
version          = "0.4.1"
path             = "../.."
default-features = false
features         = ["drv8825"]
