[package]
name    = "drv8825"
version = "0.6.0"
authors = [
    "Hanno Braun <hanno@braun-embedded.com>",
    "Jesse Braham <jesse@beta7.io>",
]
edition = "2018"

description = "Driver crate for the DRV8825 stepper motor driver"
repository  = "https://github.com/flott-motion/stepper"
license     = "0BSD"
keywords    = ["stepper", "motor", "driver", "pololu"]
categories  = ["embedded", "hardware-support", "no-std", "science::robotics"]


[dependencies.stepper]
version          = "0.6.0"
path             = "../.."
default-features = false
features         = ["drv8825"]
